[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/gui_turret_detail.gd" type="Script" id=1]
[ext_resource path="res://themes/DarkTheme/Dark.theme" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.392157 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="gui_turret_detail" type="PanelContainer"]
margin_right = 64.0
margin_bottom = 29.0
grow_vertical = 2
size_flags_horizontal = 9
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 63.0
margin_bottom = 28.0

[node name="name_label" type="Label" parent="vbox"]
margin_top = -1.0
margin_right = 62.4
margin_bottom = 23.4
text = "turret: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox_global" type="HBoxContainer" parent="vbox"]
margin_top = 27.0
margin_right = 62.0
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox_labels" type="VBoxContainer" parent="vbox/hbox_global"]
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox_values" type="VBoxContainer" parent="vbox/hbox_global"]
margin_left = 3.0
margin_right = 3.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox_upgs" type="VBoxContainer" parent="vbox/hbox_global"]
margin_left = 6.0
margin_right = 6.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}
